# ha-hk-citation

./: README.md  hacs.json  pyproject.toml
.serena/: project.yml
custom_components/hk_citation/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  manifest.json  strings.json
tests/: conftest.py  test_binary_sensor.py  test_config_flow.py  test_coordinator.py  test_init.py
